--- a/templates/add-pet-form.html
+++ b/templates/add-pet-form.html
@@ -2,7 +2,7 @@
 content %}
 <h1>Add a Pet</h1>
 
-<form id="pet-form" method="POST">
+<form id="pet-form" method="POST" action="/add">
   {{ form.hidden_tag() }}
   <!--add type=hidden form fields -->
 
